exports[`drawer component accordion renders as expected 1`] = `
<div
  className="dtLLet">
  <div
    className="first jMiPui">
    <div
      aria-expanded={true}
      className="elnnFO"
      onClick={[Function]}
      role="tab">
      <i
        aria-hidden={true}
        className="cTarNb idGniF"
        content="63d"
        fontFamily="oecom-icons"
        fontSize="inherit" />
      collapse 1
    </div>
    <div
      style={
        Object {
          "display": null,
          "height": "auto",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      }>
      <div
        style={
          Object {
            "overflow": "hidden",
          }
        }>
        first
      </div>
    </div>
  </div>
  <div
    className="second jMiPui">
    <div
      aria-expanded={false}
      className="elnnFO"
      onClick={[Function]}
      role="tab">
      <i
        aria-hidden={true}
        className="cTarNb dyzqxb"
        content="63f"
        fontFamily="oecom-icons"
        fontSize="inherit" />
      collapse 2
    </div>
    <div
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
  <div
    className="third jMiPui">
    <div
      aria-expanded={false}
      className="elnnFO"
      onClick={[Function]}
      role="tab">
      <i
        aria-hidden={true}
        className="cTarNb dyzqxb"
        content="63f"
        fontFamily="oecom-icons"
        fontSize="inherit" />
      collapse 3
    </div>
    <div
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
</div>
`;

exports[`drawer component drawer renders as expected 1`] = `
<div
  className="important dtLLet">
  <div
    className="first jMiPui">
    <div
      aria-expanded={false}
      className="elnnFO"
      onClick={[Function]}
      role="tab">
      <i
        aria-hidden={true}
        className="cTarNb dyzqxb"
        content="63f"
        fontFamily="oecom-icons"
        fontSize="inherit" />
      collapse 1
    </div>
    <div
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
  <div
    className="second kTCRfe">
    <div
      aria-expanded={false}
      className="elnnFO"
      onClick={[Function]}
      role="tab">
      <i
        aria-hidden={true}
        className="cTarNb dyzqxb"
        content="63f"
        fontFamily="oecom-icons"
        fontSize="inherit" />
      collapse 2
    </div>
    <div
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
  <div
    className="third jMiPui">
    <div
      aria-expanded={false}
      className="elnnFO"
      onClick={[Function]}
      role="tab">
      <i
        aria-hidden={true}
        className="cTarNb dyzqxb"
        content="63f"
        fontFamily="oecom-icons"
        fontSize="inherit" />
      collapse 3
    </div>
    <div
      style={
        Object {
          "display": "none",
          "height": "0",
          "overflow": "hidden",
          "transition": "height .35s ease",
        }
      } />
  </div>
</div>
`;
